made everything more compatible across screens, should work on iphone4 now? lets see.. also fixed the search bar so that it works correctly everywhere now.

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -72,6 +72,9 @@
 .dropdown-toggle {
   color: $text-faded;
   transition: 0.2s;
+  &:focus {
+      outline: none;
+    }
   &[aria-expanded="true"] {
     color: $text;
   }
@@ -157,18 +160,32 @@
 
 .navbar-collapse-search-custom {
   @include for-tablet-landscape-down  {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+    transition:0.2s;
   }
   @include for-desktop-up {
-    display: block;
+    min-width: 300px;
+    height: 39px;
+    opacity: 100;
+    visibility: visible;
+    overflow: visible;
+    transition:0.2s;
   }
 }
 .navbar-collapse-search-dropdown-custom {
   @include for-tablet-landscape-down  {
     display: block;
+    // opacity: 100;
+    // visibility: visible;
   }
   @include for-desktop-up {
     display: none;
+    // opacity: 0;
+    // visibility: hidden;
   }
 }
 
